--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button class="button" id="forward" arial-label="Adelantar 10 segundos" title="Adelantar 10 segundos"></button>
             </div>
             <div class="player-progress">
-                <input type="text" class="range"> 
+                <input type="range"" class="range"> 
             </div>
             
         </div>
