--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <div class="wrapper">
         <div class="player">
             <video id="video" poster="./images/poster.jpg" muted src="./videos/lofi.mp4" width="400"></video>
-            <h2 class="player-title">Música para dormir</h2>
-            <div class="player-actions">
-                <button class="button" id="backward" arial-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
-                <button class="button" id="play" arial-label="Reproducir" title="Reproducir"></button>
-                <button class="button" hidden id="pause" arial-label="Pausar" title="Pausar"></button>
-                <button class="button" id="forward" arial-label="Adelantar 10 segundos" title="Adelantar 10 segundos"></button>
+            <div class="player-overlay">
+                <h2 class="player-title">Música para dormir</h2>
+                <div class="player-actions">
+                    <button class="button" id="backward" arial-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
+                    <button class="button" id="play" arial-label="Reproducir" title="Reproducir"></button>
+                    <button class="button" hidden id="pause" arial-label="Pausar" title="Pausar"></button>
+                    <button class="button" id="forward" arial-label="Adelantar 10 segundos" title="Adelantar 10 segundos"></button>
+                </div>
+                <div class="player-progress">
+                    <!-- se puede poner el min, max(con js se puede setear el max) y step que es como medir el vaalor. La propiedad value para que empiece de 0-->
+                    <input id="progress" type="range" min="0" value="0" step="1"> 
+                </div>
             </div>
-            <div class="player-progress">
-                <input id="progress" type="range" min="0" value="0" step="1"> 
-            </div>
-            
         </div>
     </div>
     
