change title video

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
     <div class="wrapper">
         <div class="player">
-            <video id="video" poster="./images/poster.jpg" muted src="./videos/lofi.mp4" width="400"></video>
+            <!-- el poster sirve para poner una imagen fija antes de reproducir el video. poster="./images/poster.jpg" -->
+            <video id="video" src="https://media.w3.org/2010/05/sintel/trailer.mp4" width="400"></video>
             <div class="player-overlay">
-                <h2 class="player-title">Música para dormir</h2>
+                <h2 class="player-title">Trailer Sintel</h2>
                 <div class="player-actions">
                     <button class="button" id="backward" arial-label="Retroceder 10 segundos" title="Retroceder 10 segundos"></button>
                     <button class="button" id="play" arial-label="Reproducir" title="Reproducir"></button>
