--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Reproductor</title>
+    <link rel="icon" href="./images/favicon.ico" type="icon">
+    <title>Reproductor de video</title>
 </head>
 <body>
     <div class="wrapper">
