--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="icon" href="./images/favicon.ico" type="icon">
-    <title>Reproductor de video</title>
+    <title>Proyecto reproductor de video</title>
 </head>
 <body>
     <div class="wrapper">
+        <h1>Video Player</h1>
         <div class="player">
             <!-- el poster sirve para poner una imagen fija antes de reproducir el video. poster="./images/poster.jpg" -->
             <video id="video" src="https://media.w3.org/2010/05/sintel/trailer.mp4" width="400"></video>
